--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,7 +1,7 @@
 {
   "meta": {
     "username": "rorohiko21",
-    "repositoryName": "hubpress.io",
+    "repositoryName": "blog",
     "branch": "gh-pages"
   },
   "theme": {
